# RayTracing

./: CMakeLists.txt  default.cfg
src/: main.cpp
src/context/: cl_context.cpp  cl_context.hpp
src/io/: benchmark_config.cpp  benchmark_config.hpp  hdr_loader.cpp  store_bmp.cpp  store_bmp.hpp
src/kernels/: kernel_bvh.cl  kernel_config.hpp
src/mathlib/: mathlib.hpp
src/ocl_helper/: ocl_helper.cpp  ocl_helper.hpp
src/renderers/: render.cpp  render.hpp
src/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp
src/utils/: viewport.hpp
